# axum-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
logs/: app-local.log.2025-12-21
migrations/: 20251218152958_create_users_table.sql  20251218170722_create_refresh_tokens_table.sql  20251219181644_create_audit_logs_table.sql
src/: main.rs
src/application/: mod.rs
src/application/audit/: audit_logger.rs  mod.rs
src/application/auth/: logout.rs  mod.rs  refresh_access_token.rs
src/application/security/: jwt.rs  mod.rs  password_hasher.rs  password_policy.rs
src/application/user/: change_password.rs  get_current_user.rs  login_user.rs  mod.rs  register_user.rs  update_profile.rs
src/domain/: mod.rs
src/domain/audit/: action.rs  entity.rs  mod.rs  repository.rs
src/domain/auth/: mod.rs  refresh_token.rs  repository.rs
src/domain/rate_limit/: bucket.rs  mod.rs  store.rs
src/domain/user/: entity.rs  errors.rs  mod.rs  repository.rs  value_objects.rs
src/http/: auth_context.rs  error.rs  mod.rs  routes.rs
src/http/extractors/: auth_user.rs  client_context.rs  mod.rs
src/http/handlers/: health.rs
src/http/middleware/: auth_middleware.rs  mod.rs  rate_limit_key.rs  rate_limit_middleware.rs  rate_limit_policy.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: mod.rs  postgres_audit_log_repository.rs  postgres_refresh_token_repository.rs  postgres_user_repository.rs
src/infrastructure/rate_limit/: in_memory_store.rs  mod.rs  (+1 more)
src/shared/: api_codes.rs  api_messages.rs  config.rs  error.rs  mod.rs  response.rs  state.rs
(+21 files in other folders)
