[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Async runtime & web ---
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["macros"] }

# --- Serialization ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- Database ---
sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
redis = { version = "1.0.1", features = ["tokio-comp"] }

# --- Security & utils ---
argon2 = "0.6.0-rc.5"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# --- Architecture support ---
thiserror = "2.0.17"
async-trait = "0.1.89"

# --- Observability ---
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

# --- Config ---
dotenvy = "0.15.7"
rand = "0.9.2"
base64 = "0.22.1"